// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validation tests fails later with malformed regex 1`] = `
Object {
  "reason": "smtp",
  "valid": false,
  "validators": Object {
    "disposable": Object {
      "valid": true,
    },
    "mx": Object {
      "valid": true,
    },
    "regex": Object {
      "valid": true,
    },
    "smtp": Object {
      "reason": "mailbox_not_found",
      "valid": false,
    },
    "typo": Object {
      "valid": true,
    },
  },
}
`;

exports[`validation tests fails with bad dns 1`] = `
Object {
  "reason": "mx",
  "valid": false,
  "validators": Object {
    "disposable": Object {
      "valid": true,
    },
    "mx": Object {
      "reason": "MX record not found",
      "valid": false,
    },
    "regex": Object {
      "valid": true,
    },
    "smtp": Object {
      "valid": false,
    },
    "typo": Object {
      "valid": true,
    },
  },
}
`;

exports[`validation tests fails with bad mailbox 1`] = `
Object {
  "accept_all": false,
  "disposable": false,
  "dkim": false,
  "dmarc": true,
  "domain": "andco.life",
  "domainStatus": "corporate",
  "free": false,
  "mx_domain": "outlook.com",
  "mx_record": "andco-life.mail.protection.outlook.com",
  "provider": null,
  "role": false,
  "roleType": null,
  "security_score": 70,
  "smtpBlocked": false,
  "smtpVerified": true,
  "spf": true,
  "user": "david",
  "valid": true,
  "validators": Object {
    "disposable": Object {
      "valid": true,
    },
    "mx": Object {
      "valid": true,
    },
    "regex": Object {
      "valid": true,
    },
    "smtp": Object {
      "valid": true,
    },
    "typo": Object {
      "valid": true,
    },
  },
}
`;

exports[`validation tests fails with bad regex 1`] = `
Object {
  "reason": "regex",
  "valid": false,
  "validators": Object {
    "disposable": Object {
      "valid": false,
    },
    "mx": Object {
      "valid": false,
    },
    "regex": Object {
      "reason": "Email does not contain \\"@\\".",
      "valid": false,
    },
    "smtp": Object {
      "valid": false,
    },
    "typo": Object {
      "valid": false,
    },
  },
}
`;

exports[`validation tests fails with common typo 1`] = `
Object {
  "reason": "typo",
  "valid": false,
  "validators": Object {
    "disposable": Object {
      "valid": false,
    },
    "mx": Object {
      "valid": false,
    },
    "regex": Object {
      "valid": true,
    },
    "smtp": Object {
      "valid": false,
    },
    "typo": Object {
      "reason": "Likely typo, suggested email: david@gmail.com",
      "valid": false,
    },
  },
}
`;

exports[`validation tests fails with disposable email 1`] = `
Object {
  "reason": "disposable",
  "valid": false,
  "validators": Object {
    "disposable": Object {
      "reason": "Email was created using a disposable email service",
      "valid": false,
    },
    "mx": Object {
      "valid": false,
    },
    "regex": Object {
      "valid": true,
    },
    "smtp": Object {
      "valid": false,
    },
    "typo": Object {
      "valid": true,
    },
  },
}
`;

exports[`validation tests fails without sending data 1`] = `
Object {
  "reason": "smtp",
  "valid": false,
  "validators": Object {
    "disposable": Object {
      "valid": true,
    },
    "mx": Object {
      "valid": true,
    },
    "regex": Object {
      "valid": true,
    },
    "smtp": Object {
      "reason": "smtp_error",
      "valid": false,
    },
    "typo": Object {
      "valid": true,
    },
  },
}
`;

exports[`validation tests passes when valid special char 1`] = `
Object {
  "accept_all": true,
  "disposable": false,
  "dkim": true,
  "dmarc": true,
  "domain": "oftn.org",
  "domainStatus": "corporate",
  "free": false,
  "mx_domain": "google.com",
  "mx_record": "aspmx.l.google.com",
  "provider": null,
  "role": false,
  "roleType": null,
  "security_score": 100,
  "smtpBlocked": false,
  "smtpVerified": true,
  "spf": true,
  "user": "~",
  "valid": true,
  "validators": Object {
    "disposable": Object {
      "valid": true,
    },
    "mx": Object {
      "valid": true,
    },
    "regex": Object {
      "valid": true,
    },
    "smtp": Object {
      "valid": true,
    },
    "typo": Object {
      "valid": true,
    },
  },
}
`;

exports[`validation tests passes when valid wildcard 1`] = `
Object {
  "accept_all": false,
  "disposable": false,
  "dkim": false,
  "dmarc": true,
  "domain": "davidalbertoadler.com",
  "domainStatus": "corporate",
  "free": false,
  "mx_domain": "google.com",
  "mx_record": "aspmx.l.google.com",
  "provider": null,
  "role": false,
  "roleType": null,
  "security_score": 60,
  "smtpBlocked": false,
  "smtpVerified": false,
  "spf": true,
  "user": "info",
  "valid": true,
  "validators": Object {
    "disposable": Object {
      "valid": true,
    },
    "mx": Object {
      "valid": true,
    },
    "regex": Object {
      "valid": true,
    },
    "smtp": Object {
      "valid": true,
    },
    "typo": Object {
      "valid": true,
    },
  },
}
`;

exports[`validation tests passes when we skip smtp validation 1`] = `
Object {
  "accept_all": false,
  "disposable": false,
  "dkim": false,
  "dmarc": true,
  "domain": "andco.life",
  "domainStatus": "corporate",
  "free": false,
  "mx_domain": "outlook.com",
  "mx_record": "andco-life.mail.protection.outlook.com",
  "provider": null,
  "role": false,
  "roleType": null,
  "security_score": 70,
  "smtpBlocked": false,
  "smtpVerified": false,
  "spf": true,
  "user": "david",
  "valid": true,
  "validators": Object {
    "disposable": Object {
      "valid": true,
    },
    "mx": Object {
      "valid": true,
    },
    "regex": Object {
      "valid": true,
    },
    "smtp": Object {
      "valid": true,
    },
    "typo": Object {
      "valid": true,
    },
  },
}
`;

exports[`validation tests passes with custom TLD 1`] = `
Object {
  "accept_all": false,
  "disposable": false,
  "dkim": true,
  "dmarc": true,
  "domain": "utob.ir",
  "domainStatus": "corporate",
  "free": false,
  "mx_domain": "utob.ir",
  "mx_record": "utob.ir",
  "provider": null,
  "role": true,
  "roleType": "info",
  "security_score": 75,
  "smtpBlocked": false,
  "smtpVerified": false,
  "spf": true,
  "user": "info",
  "valid": true,
  "validators": Object {
    "disposable": Object {
      "valid": true,
    },
    "mx": Object {
      "valid": true,
    },
    "regex": Object {
      "valid": true,
    },
    "smtp": Object {
      "valid": true,
    },
    "typo": Object {
      "valid": true,
    },
  },
}
`;
